create cart & checkout & shop

--- a/blog.html
+++ b/blog.html
@@ -196,7 +196,7 @@
                     <li class="search" id="search"><i class="fas fa-search"></i> </li>
                     <li class="right-menu"> <a class="fas fa-user usericon" href="login.html"></a> </li>
                     <li class="cart" id="cart"><i class="fas fa-shopping-basket"></i>
-                        <span class="badge">12</span>
+                        <span class="badge">0</span>
                     </li>
                 </ul>
             </div>
@@ -393,12 +393,13 @@
         </div><!-- //. bottom content -->
     </div>
     <!-- slide sidebar area end -->
+
     <!-- cart sidebar area start -->
-    <div class="cart-sidebar-area" id="cart-sidebar-area">
+    <div class="cart-sidebar-area home-3" id="cart-sidebar-area">
         <div class="top-content">
             <!-- top content -->
             <a href="#" class="logo">
-                <img src="assets/img/logo-white.png" alt="logo">
+                <h3 class="text-white">آقای باتری</h3>
             </a>
             <span class="side-sidebar-close-btn"><i class="fas fa-times"></i></span>
         </div><!-- //. top content -->
@@ -407,73 +408,15 @@
             <div class="cart-products">
                 <!-- cart product -->
                 <h4 class="title">سبد خرید</h4>
-                <div class="single-product-item">
-                    <!-- single product item -->
-                    <div class="thumb">
-                        <img src="assets/img/recent-review/01.jpg" alt="recent review">
-                    </div>
-                    <div class="content">
-                        <h4 class="title">کفش تیره</h4>
-                        <div class="price"><span class="pprice">350.00 تومان</span> <del class="dprice">500.00
-                                تومان</del></div>
-                        <a href="#" class="remove-cart">حذف</a>
-                    </div>
-                </div><!-- //. single product item -->
-                <div class="single-product-item">
-                    <!-- single product item -->
-                    <div class="thumb">
-                        <img src="assets/img/recent-review/02.jpg" alt="recent review">
-                    </div>
-                    <div class="content">
-                        <h4 class="title">میلو هوروبرد</h4>
-                        <div class="price"><span class="pprice">350.00 تومان</span> <del class="dprice">500.00
-                                تومان</del></div>
-                        <a href="#" class="remove-cart">حذف</a>
-                    </div>
-                </div><!-- //. single product item -->
-                <div class="single-product-item">
-                    <!-- single product item -->
-                    <div class="thumb">
-                        <img src="assets/img/recent-review/03.jpg" alt="recent review">
-                    </div>
-                    <div class="content">
-                        <h4 class="title">تی شرت سیاه برک</h4>
-                        <div class="price"><span class="pprice">350.00 تومان</span> <del class="dprice">500.00
-                                تومان</del></div>
-                        <a href="#" class="remove-cart">حذف</a>
-                    </div>
-                </div>
-                <div class="single-product-item">
-                    <!-- single product item -->
-                    <div class="thumb">
-                        <img src="assets/img/recent-review/04.jpg" alt="recent review">
-                    </div>
-                    <div class="content">
-                        <h4 class="title">تی شرت سیاه برک</h4>
-                        <div class="price"><span class="pprice">350.00 تومان</span> <del class="dprice">500.00
-                                تومان</del></div>
-                        <a href="#" class="remove-cart">حذف</a>
-                    </div>
-                </div><!-- //. single product item -->
-                <div class="single-product-item">
-                    <!-- single product item -->
-                    <div class="thumb">
-                        <img src="assets/img/recent-review/05.jpg" alt="recent review">
-                    </div>
-                    <div class="content">
-                        <h4 class="title">تی شرت سیاه برک</h4>
-                        <div class="price"><span class="pprice">350.00 تومان</span> <del class="dprice">500.00
-                                تومان</del></div>
-                        <a href="#" class="remove-cart">حذف</a>
-                    </div>
-                </div>
+                <h4 class="text-white">چیزی وجود ندارد</h4>
                 <div class="btn-wrapper">
-                    <a href="checkout.html" class="boxed-btn">بررسی و پرداخت</a>
+                    <a href="cart.html" class="boxed-btn">بررسی و پرداخت</a>
                 </div>
             </div> <!-- //. cart product -->
         </div><!-- //. bottom content -->
     </div>
     <!-- cart sidebar area end -->
+
     <!-- blog page content area start -->
     <section class="blog-page-content-area">
         <div class="container">
@@ -688,8 +631,9 @@
     </section>
     <!-- blog page content area end -->
 
+
     <!-- footer area one start -->
-    <footer class="footer-arae-one">
+    <footer class="footer-arae-one home-3">
         <div class="footer-top-one blue-bg">
             <!-- footer top one-->
             <div class="container">
@@ -697,8 +641,8 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-widget about">
                             <div class="widget-body">
-                                <a href="index.html" class="footer-logo">
-                                    <img src="assets/img/logo.png" alt="footer logo">
+                                <a href="index-3.html" class="footer-logo">
+                                    <h3 class="text-white">آقای باتری</h3>
                                 </a>
                                 <ul class="contact-info-list">
                                     <li>
@@ -707,8 +651,9 @@
                                                 <i class="fas fa-map-marker-alt"></i>
                                             </div>
                                             <div class="content">
-                                                <span class="details">ایران، ارومیه، ساختمان حافظ، فروشگاه بیگ
-                                                    انیا</span>
+                                                <span class="details">
+                                                    ایران ، تهران
+                                                </span>
                                             </div>
                                         </div>
                                     </li>
@@ -718,8 +663,8 @@
                                                 <i class="fas fa-envelope"></i>
                                             </div>
                                             <div class="content">
-                                                <span class="details">youremail@yourdomain.com</span>
-                                                <span class="details">example@yourdomain.com</span>
+                                                <span class="details">mrbattry@gmail.com</span>
+
                                             </div>
                                         </div>
                                     </li>
@@ -729,8 +674,8 @@
                                                 <i class="fas fa-phone"></i>
                                             </div>
                                             <div class="content">
-                                                <span class="details">+88 (0) 101 0000 000</span>
-                                                <span class="details">+99 (989) 101 0000 000</span>
+                                                <span class="details">021 66 64 666</span>
+
                                             </div>
                                         </div>
                                     </li>
@@ -792,48 +737,12 @@
                 </div>
             </div>
         </div><!-- //.footer top one -->
-        <div class="copyright-area blue-bg">
+        <div class="copyright-area blue-bg pb-3">
             <!-- copyright area -->
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="copyright-inner">
-                            <!-- copyright inner -->
-                            <div class="left-content-area">
-                                <span class="copyright-text">کپی رایت@TN_Plugin - 2018 _ فارسی و راست چین فارسی توسط
-                                    طاهر نصیری</span>
-                            </div>
-                            <div class="right-content-area">
-                                <ul class="payment-logo">
-                                    <li>
-                                        <img src="assets/img/payment-logo/01.png" alt="payment logo">
-                                    </li>
-                                    <li>
-                                        <img src="assets/img/payment-logo/02.png" alt="payment logo">
-                                    </li>
-                                    <li>
-                                        <img src="assets/img/payment-logo/03.png" alt="payment logo">
-                                    </li>
-                                    <li>
-                                        <img src="assets/img/payment-logo/04.png" alt="payment logo">
-                                    </li>
-                                    <li>
-                                        <img src="assets/img/payment-logo/05.png" alt="payment logo">
-                                    </li>
-                                    <li>
-                                        <img src="assets/img/payment-logo/06.png" alt="payment logo">
-                                    </li>
-                                    <li>
-                                        <img src="assets/img/payment-logo/07.png" alt="payment logo">
-                                    </li>
-                                    <li>
-                                        <img src="assets/img/payment-logo/08.png" alt="payment logo">
-                                    </li>
-                                </ul>
-                            </div>
-                        </div><!-- //. copyright inner -->
-                    </div>
-                </div>
+                <h5 class="text-white text-center">
+                    طراحی شده توسط <a style="color: #FF8641;" href="https://www.spad.co">اسپاد</a> تمامی حقوق محفوظ است
+                </h5>
             </div>
         </div><!-- //. copyright area -->
     </footer>
