--- a/checkout.html
+++ b/checkout.html
@@ -100,7 +100,7 @@
                 <ul class="navbar-nav">
                     <!-- navbar- nav -->
 
-                    <li class="nav-item active">
+                    <li class="nav-item ">
                         <a class="nav-link" href="index.html">خانه</a>
                     </li>
                     <li class="nav-item dropdown mega-menu">
@@ -195,9 +195,9 @@
                 <ul>
                     <li class="search" id="search"><i class="fas fa-search"></i> </li>
                     <li class="right-menu"> <a class="fas fa-user usericon" href="login.html"></a> </li>
-                    <li class="cart" id="cart"><i class="fas fa-shopping-basket"></i>
-                        <span class="badge">12</span>
-                    </li>
+                    <!-- <li class="cart" id="cart"><i class="fas fa-shopping-basket"></i>
+                        <span class="badge">0</span>
+                    </li> -->
                 </ul>
             </div>
 
@@ -448,119 +448,53 @@
 
 
     <!-- brand logo carousel area one start -->
-    <div class="brand-logo-carousel-area-one">
+    <!-- <div class="brand-logo-carousel-area-one">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="brand-logo-carousel-one" id="brand-logo-carousel-one">
-                        <!-- brand logo carousel one -->
-                        <div class="single-brang-logo-carousel-one-item">
-                            <a href="#">
-                                <img src="assets/img/brand-logo/01.png" alt="brand logo image">
-                            </a>
-                        </div>
-                        <div class="single-brang-logo-carousel-one-item">
-                            <a href="#">
-                                <img src="assets/img/brand-logo/02.png" alt="brand logo image">
-                            </a>
-                        </div>
-                        <div class="single-brang-logo-carousel-one-item">
-                            <a href="#">
-                                <img src="assets/img/brand-logo/03.png" alt="brand logo image">
-                            </a>
-                        </div>
-                        <div class="single-brang-logo-carousel-one-item">
-                            <a href="#">
-                                <img src="assets/img/brand-logo/04.png" alt="brand logo image">
-                            </a>
-                        </div>
-                        <div class="single-brang-logo-carousel-one-item">
-                            <a href="#">
-                                <img src="assets/img/brand-logo/05.png" alt="brand logo image">
-                            </a>
-                        </div>
-                        <div class="single-brang-logo-carousel-one-item">
-                            <a href="#">
-                                <img src="assets/img/brand-logo/06.png" alt="brand logo image">
-                            </a>
-                        </div>
-                    </div><!-- //.brand logo carousel one -->
-                </div>
-            </div>
-        </div>
+                     brand logo carousel one 
+    <div class="single-brang-logo-carousel-one-item">
+        <a href="#">
+            <img src="assets/img/brand-logo/01.png" alt="brand logo image">
+        </a>
     </div>
+    <div class="single-brang-logo-carousel-one-item">
+        <a href="#">
+            <img src="assets/img/brand-logo/02.png" alt="brand logo image">
+        </a>
+    </div>
+    <div class="single-brang-logo-carousel-one-item">
+        <a href="#">
+            <img src="assets/img/brand-logo/03.png" alt="brand logo image">
+        </a>
+    </div>
+    <div class="single-brang-logo-carousel-one-item">
+        <a href="#">
+            <img src="assets/img/brand-logo/04.png" alt="brand logo image">
+        </a>
+    </div>
+    <div class="single-brang-logo-carousel-one-item">
+        <a href="#">
+            <img src="assets/img/brand-logo/05.png" alt="brand logo image">
+        </a>
+    </div>
+    <div class="single-brang-logo-carousel-one-item">
+        <a href="#">
+            <img src="assets/img/brand-logo/06.png" alt="brand logo image">
+        </a>
+    </div>
+    </div> //.brand logo carousel one 
+    </div>
+    </div>
+    </div>
+    </div> -->
     <!-- brand logo carousel area one end -->
 
-    <!-- our story area start -->
-    <section class="our-story-area gray-bg">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-8">
-                    <div class="section-title">
-                        <span class="subtitle rubik">پست های اخیر</span>
-                        <h2 class="title rubik">داستانی درباره ما</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-md-6">
-                    <div class="single-our-story-item">
-                        <!-- single our story item -->
-                        <div class="thumb">
-                            <img src="assets/img/our-story/01.jpg" alt="our story">
-                        </div>
-                        <div class="conent">
-                            <span class="time">1398 اردیبهشت</span>
-                            <a href="#">
-                                <h4 class="title">زیباترین قالب فروشگاهی چند منظوره 2019.</h4>
-                            </a>
-                            <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک
-                                است. لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
-                                گرافیک است. </p>
-                        </div>
-                    </div><!-- //.single our story item -->
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="single-our-story-item">
-                        <!-- single our story item -->
-                        <div class="thumb">
-                            <img src="assets/img/our-story/02.jpg" alt="our story">
-                        </div>
-                        <div class="conent">
-                            <span class="time">1398 اردیبهشت</span>
-                            <a href="#">
-                                <h4 class="title">زیباترین قالب فروشگاهی چند منظوره 2019.</h4>
-                            </a>
-                            <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک
-                                است. لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
-                                گرافیک است. </p>
-                        </div>
-                    </div><!-- //.single our story item -->
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="single-our-story-item">
-                        <!-- single our story item -->
-                        <div class="thumb">
-                            <img src="assets/img/our-story/03.jpg" alt="our story">
-                        </div>
-                        <div class="conent">
-                            <span class="time">1398 اردیبهشت</span>
-                            <a href="#">
-                                <h4 class="title">زیباترین قالب فروشگاهی چند منظوره 2019.</h4>
-                            </a>
-                            <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک
-                                است. لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
-                                گرافیک است. </p>
-                        </div>
-                    </div><!-- //.single our story item -->
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- our story area end -->
+
 
     <!-- footer area one start -->
-    <footer class="footer-arae-one">
+    <footer class="footer-arae-one home-3">
         <div class="footer-top-one blue-bg">
             <!-- footer top one-->
             <div class="container">
@@ -568,8 +502,8 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-widget about">
                             <div class="widget-body">
-                                <a href="index.html" class="footer-logo">
-                                    <img src="assets/img/logo.png" alt="footer logo">
+                                <a href="index-3.html" class="footer-logo">
+                                    <h3 class="text-white">آقای باتری</h3>
                                 </a>
                                 <ul class="contact-info-list">
                                     <li>
@@ -578,8 +512,9 @@
                                                 <i class="fas fa-map-marker-alt"></i>
                                             </div>
                                             <div class="content">
-                                                <span class="details">ایران، ارومیه، ساختمان حافظ، فروشگاه بیگ
-                                                    انیا</span>
+                                                <span class="details">
+                                                    ایران ، تهران
+                                                </span>
                                             </div>
                                         </div>
                                     </li>
@@ -589,8 +524,8 @@
                                                 <i class="fas fa-envelope"></i>
                                             </div>
                                             <div class="content">
-                                                <span class="details">youremail@yourdomain.com</span>
-                                                <span class="details">example@yourdomain.com</span>
+                                                <span class="details">mrbattry@gmail.com</span>
+
                                             </div>
                                         </div>
                                     </li>
@@ -600,8 +535,8 @@
                                                 <i class="fas fa-phone"></i>
                                             </div>
                                             <div class="content">
-                                                <span class="details">+88 (0) 101 0000 000</span>
-                                                <span class="details">+99 (989) 101 0000 000</span>
+                                                <span class="details">021 66 64 666</span>
+
                                             </div>
                                         </div>
                                     </li>
@@ -616,10 +551,10 @@
                             </div>
                             <div class="widget-body">
                                 <ul class="page-list">
-                                    <li><a href="#">-- بلاگ</a></li>
-                                    <li><a href="#">-- گفت و گو</a></li>
+                                    <li><a href="blog.html">-- بلاگ</a></li>
+                                    <li><a href="faq.html">-- گفت و گو</a></li>
                                     <li><a href="#">-- پرداخت</a></li>
-                                    <li><a href="#">-- حمل و نقل</a></li>
+                                    <li><a href="track-orders.html">-- حمل و نقل</a></li>
                                     <li><a href="#">-- سفارش من کجاست</a></li>
                                     <li><a href="#">-- سیاست بازگشت</a></li>
                                 </ul>
@@ -638,7 +573,7 @@
                                     <li><a href="#">-- آدرس</a></li>
                                     <li><a href="#">-- تخفیفات</a></li>
                                     <li><a href="#">-- تاریخچه سفارش ها</a></li>
-                                    <li><a href="#">-- رهگیری سفارش</a></li>
+                                    <li><a href="track-orders.html">-- رهگیری سفارش</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -653,9 +588,9 @@
                                     <li><a href="#">-- راهنمای سایت</a></li>
                                     <li><a href="#">-- جستجوی محصولات</a></li>
                                     <li><a href="#">-- جستجوی پیشرفته</a></li>
-                                    <li><a href="#">-- درباره ما</a></li>
-                                    <li><a href="#">-- تماس با ما</a></li>
-                                    <li><a href="#">-- تامین کنندگان</a></li>
+                                    <li><a href="about.html">-- درباره ما</a></li>
+                                    <li><a href="contact.html">-- تماس با ما</a></li>
+                                    <li><a href="partners.html">-- تامین کنندگان</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -663,48 +598,12 @@
                 </div>
             </div>
         </div><!-- //.footer top one -->
-        <div class="copyright-area blue-bg">
+        <div class="copyright-area blue-bg pb-3">
             <!-- copyright area -->
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="copyright-inner">
-                            <!-- copyright inner -->
-                            <div class="left-content-area">
-                                <span class="copyright-text">کپی رایت@TN_Plugin - 2018 _ فارسی و راست چین فارسی توسط
-                                    طاهر نصیری</span>
-                            </div>
-                            <div class="right-content-area">
-                                <ul class="payment-logo">
-                                    <li>
-                                        <img src="assets/img/payment-logo/01.png" alt="payment logo">
-                                    </li>
-                                    <li>
-                                        <img src="assets/img/payment-logo/02.png" alt="payment logo">
-                                    </li>
-                                    <li>
-                                        <img src="assets/img/payment-logo/03.png" alt="payment logo">
-                                    </li>
-                                    <li>
-                                        <img src="assets/img/payment-logo/04.png" alt="payment logo">
-                                    </li>
-                                    <li>
-                                        <img src="assets/img/payment-logo/05.png" alt="payment logo">
-                                    </li>
-                                    <li>
-                                        <img src="assets/img/payment-logo/06.png" alt="payment logo">
-                                    </li>
-                                    <li>
-                                        <img src="assets/img/payment-logo/07.png" alt="payment logo">
-                                    </li>
-                                    <li>
-                                        <img src="assets/img/payment-logo/08.png" alt="payment logo">
-                                    </li>
-                                </ul>
-                            </div>
-                        </div><!-- //. copyright inner -->
-                    </div>
-                </div>
+                <h5 class="text-white text-center">
+                    طراحی شده توسط <a style="color: #FF8641;" href="https://www.spad.co">اسپاد</a> تمامی حقوق محفوظ است
+                </h5>
             </div>
         </div><!-- //. copyright area -->
     </footer>
