--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <li class="search" id="search"><i class="fas fa-search"></i> </li>
                     <li class="right-menu"> <a class="fas fa-user usericon" href="login.html"></a> </li>
                     <li class="cart" id="cart"><i class="fas fa-shopping-basket"></i>
-                        <span class="badge">12</span>
+                        <span class="badge">0</span>
                     </li>
                 </ul>
             </div>
@@ -247,68 +247,9 @@
             <div class="cart-products">
                 <!-- cart product -->
                 <h4 class="title">سبد خرید</h4>
-                <div class="single-product-item">
-                    <!-- single product item -->
-                    <div class="thumb">
-                        <img src="assets/img/recent-review/01.jpg" alt="recent review">
-                    </div>
-                    <div class="content">
-                        <h4 class="title">باتری ماشین</h4>
-                        <div class="price"><span class="pprice">350.00 تومان</span> <del class="dprice">500.00
-                                تومان</del></div>
-                        <a href="#" class="remove-cart">حذف</a>
-                    </div>
-                </div><!-- //. single product item -->
-                <div class="single-product-item">
-                    <!-- single product item -->
-                    <div class="thumb">
-                        <img src="assets/img/recent-review/02.jpg" alt="recent review">
-                    </div>
-                    <div class="content">
-                        <h4 class="title">باتری ماشین</h4>
-                        <div class="price"><span class="pprice">350.00 تومان</span> <del class="dprice">500.00
-                                تومان</del></div>
-                        <a href="#" class="remove-cart">حذف</a>
-                    </div>
-                </div><!-- //. single product item -->
-                <div class="single-product-item">
-                    <!-- single product item -->
-                    <div class="thumb">
-                        <img src="assets/img/recent-review/03.jpg" alt="recent review">
-                    </div>
-                    <div class="content">
-                        <h4 class="title">باتری ماشین</h4>
-                        <div class="price"><span class="pprice">350.00 تومان</span> <del class="dprice">500.00
-                                تومان</del></div>
-                        <a href="#" class="remove-cart">حذف</a>
-                    </div>
-                </div>
-                <div class="single-product-item">
-                    <!-- single product item -->
-                    <div class="thumb">
-                        <img src="assets/img/recent-review/04.jpg" alt="recent review">
-                    </div>
-                    <div class="content">
-                        <h4 class="title">باتری ماشین</h4>
-                        <div class="price"><span class="pprice">350.00 تومان</span> <del class="dprice">500.00
-                                تومان</del></div>
-                        <a href="#" class="remove-cart">حذف</a>
-                    </div>
-                </div><!-- //. single product item -->
-                <div class="single-product-item">
-                    <!-- single product item -->
-                    <div class="thumb">
-                        <img src="assets/img/recent-review/05.jpg" alt="recent review">
-                    </div>
-                    <div class="content">
-                        <h4 class="title">باتری ماشین</h4>
-                        <div class="price"><span class="pprice">350.00 تومان</span> <del class="dprice">500.00
-                                تومان</del></div>
-                        <a href="#" class="remove-cart">حذف</a>
-                    </div>
-                </div>
+                <h4 class="text-white">چیزی وجود ندارد</h4>
                 <div class="btn-wrapper">
-                    <a href="checkout.html" class="boxed-btn">بررسی و پرداخت</a>
+                    <a href="cart.html" class="boxed-btn">بررسی و پرداخت</a>
                 </div>
             </div> <!-- //. cart product -->
         </div><!-- //. bottom content -->
